fixed visibility issues on welcome message

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,9 +55,34 @@ ____________________________*/
 .logo-wrapper .logo-image:hover,
 .checkbox-btn:hover,
 .nav-icon-wrapper:hover,
-.small-screen-icons .btn-nav:hover
-.Pro:hover{
+.small-screen-icons .btn-nav:hover{
     opacity: .5;
+}
+
+.banner-text .pro{
+    text-decoration: none;
+    color: var(--color-primary);
+    background-color: aliceblue;
+    /* font-size: 1.5rem; */
+    font-weight: 700;
+    font-family: var(--font-primary);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin: 0 10px;
+    cursor: pointer;
+    /* padding: 5px 10px; */
+    border-radius: 5px;
+    border: 1px solid var(--color-primary);
+    max-width: 100%;
+    transform: translate(-50%, -50%);
+    transition: all .3s ease-in-out;
+
+
+}
+
+.banner-text .pro:hover{
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
 }
 
 /* the nav ul will be used to create the Navigation Menu, when screen size becomes smaller */
@@ -145,7 +170,6 @@ display: none;
     color: var(--color-secondary);
     font-weight: bold;
     text-align: center;
-   
     transform: translate(-50%, -50%);
     font-family: 'Sacramento', cursive;
     font-size: 2rem;
